--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,7 +8,7 @@
 
         <p>Last updated: 27-july-2023</p>
 
-        <p>Your privacy is important to us. It is our policy to respect your privacy and comply with any applicable law and regulation regarding any personal data we may collect about you, including across our website, <a href="https://perthos.github.io/privacy-policy.html">https://perthos.github.io/privacy-policy.html</a>, and other sites we own and operate.</p>
+        <p>Your privacy is important to us. It is our policy to respect your privacy and comply with any applicable law and regulation regarding any personal data we may collect about you, including across our website, <a href="https://perthoshub.github.io/github.io/privacy-policy.html">https://perthoshub.github.io/github.io/privacy-policy.html</a>, and other sites we own and operate.</p>
 
         <p>Personal data is defined in broad terms by the General Data Protection Regulation (GDPR) as any information relating to an identified or identifiable natural person.</p>
 
